<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px">

        <Button
            android:text="@string/startAnim"
            android:layout_width="100dp"
            android:id="@+id/btnStart"
            android:layout_height="fill_parent"/>

        <Button
            android:layout_width="100dp"
            android:text="@string/stopAnim"
            android:id="@+id/btnStop"
            android:layout_height="fill_parent"/>

        <CheckBox
            android:id="@+id/CheckBox_ifCycle_orNot"
            android:text="@string/repeatAnim"
            android:layout_width="100dp"
            android:layout_height="fill_parent"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/rocket_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/android_large"/>
</LinearLayout>
